changed disability questions and add latest pdf flow

--- a/app/views/forms/equal-opportunities/disability.html
+++ b/app/views/forms/equal-opportunities/disability.html
@@ -38,7 +38,7 @@ Disability - Equality and diversity
           name: "disability",
           fieldset: {
             legend: {
-              text: "Do you have a disability or mental health condition?",
+              text: "Do you or anyone living with you have a disability or mental health condition?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--m"
             }
@@ -71,6 +71,7 @@ Disability - Equality and diversity
   <h3 class="govuk-heading-s">IT notes:</h3>
   <ul class="govuk-list govuk-list--bullet">
       <li>No validation of the radio buttons</li>
+      <li><strong>Text of the question still under discussion to see if we ask the question above or the same without 'or anyone living with you'</strong></li>
   </ul>
 </div>
 {% endblock %}
