update the bidding form with content and error messages

--- a/app/views/forms/housing/bid/bid-form.html
+++ b/app/views/forms/housing/bid/bid-form.html
@@ -75,16 +75,16 @@
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li>the email field was optional, based on user research for the CBL form, optional is not always understood correctly and users don't always want or can provide one</li>
-    <li>we assume the way to contact the users would come from the contact preferences enteredto the CBL form and Housing would have that data stored?</li>
-    <li>is a phone number to contact housing a good thing? in case the user lost their housing registration letter or card?</li>
+    <li>the email field was optional, based on user research for the CBL form, optional is not always understood correctly and users don't always want or can provide one - <strong>agreed by Housing 18/01 </strong></li>
+    <li>we assume the way to contact the users would come from the contact preferences entered for the CBL form and Housing would have that data stored? - yes  - <strong>agreed by Housing 18/01 </strong></li>
+    <li>is a phone number to contact housing a good thing? in case the user lost their housing registration letter or card? yes  - <strong>agreed by Housing 18/01 </strong>- phone number is correct</li>
     </ul>
 </div>
 <div class="IT-notes-box">
-  <h3 class="govuk-heading-s">IT notes: <span class="UR-tag red">Email removed</span></h3>
+  <h3 class="govuk-heading-s">IT notes: <span class="UR-tag red">Email removed</span> <span class="UR-tag ok">ok to code as content agreed</span> </h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>Property field is prefilled by the choice from the previous page (radio button choice)</li>
-      <li><span class="govuk-error-message">Enter first name / Enter last name</span></li>
+      <li><span class="govuk-error-message">Enter reference number / Enter first name / Enter last name</span></li>
     </ul>
 </div>
 
