--- a/app/views/forms/housing/bid/confirmation.html
+++ b/app/views/forms/housing/bid/confirmation.html
@@ -17,7 +17,7 @@ Confirmation - Available properties
                 Bid Submitted for Montgomerie court
             </h1>
             <div class="govuk-panel__body">
-                If you successful we'll contact you within 2 days of the closing date.
+                If you're successful we'll contact you within 2 days of the closing date.
             </div>
         </div>
 <br>
@@ -25,11 +25,11 @@ Confirmation - Available properties
 <br>
 <br>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
+    <h3 class="govuk-heading-s">IT notes: <span class="UR-tag ok">ok to code as content agreed</span></h3>
         <ul class="govuk-list govuk-list--bullet">
         <li>display the name of the property selected in the radio buttons at the end</li>
         <li>As we can't know if we 're sending an email (we would need to access a database with the contact details stored in it), we can't display a warning to check their spam</li>
-        <li><strong>We really need to fix the issue of emails going to SPAM !!!</strong></li>
+        <li><strong>agreed by Housing 18/01 </strong></li>
         </ul>
     </div>
     
