--- a/app/views/home.html
+++ b/app/views/home.html
@@ -13,7 +13,7 @@
         Homepage
       </h1>
       <p>
-        We can create forms, patterns and show our work. <br><span style="color:#b10e1e ">By clicking/tapping on the ERC logo on any page</span>, you will get back to this homepage.
+        <span style="color:#b10e1e ">By clicking/tapping on the ERC logo on any page</span>, you get back to this homepage.
       </p>
     
       <h2 class="govuk-heading-m">From here you can access:</h2>
@@ -23,17 +23,48 @@
         <li><a href="forms/menu-forms.html">a list of forms</a></li>
         <li><a href="colours.html">colours</a></li>
         <li><a href="useful-links.html">useful links</a></li>
-        <li><a href="support.html">supporting documents</a></li>
+        <li><a href="support.html">Poster</a></li>
       </ul>
+
+      <details class="govuk-details">
+          <summary class="govuk-details__summary">
+            <span class="govuk-details__summary-text">
+              <strong>More about the Prototype kit</strong>
+            </span>
+          </summary>
+          <div class="govuk-details__text">
+              <h1 class="govuk-heading-m">
+                  ERC prototype using the GOV.UK Prototype Kit
+                  <span class="govuk-caption-l">{{releaseVersion}}</span>
+                </h1>{{releaseVersion | log }}
+                <p>
+                  This kit lets you rapidly create HTML prototypes using GDS principles.
+                </p>
+          
+                <h2 class="govuk-heading-m">About this page</h2>
+                <p>We recommend you add links to your prototype to this page, rather than delete it.
+                  You'll find this page in the kit at '/app/views/index.html'.</p>
+          
+                <p>You can change the service name by editing the file '/app/config.js'.</p>
+          
+                <h2 class="govuk-heading-m">Examples and documentation</h2>
+          
+                <ul class="govuk-list govuk-list--bullet">
+                  <li><a href="/docs/tutorials-and-examples">Example pages and documentation</a></li>
+                  <li>
+                    <a href="https://design-system.service.gov.uk">
+                      GOV.UK Design System
+                    </a>
+                  </li>
+                </ul>
+
+          </div>
+        </details>
+
+
 
     </div>
 </div>
 
-<script src="https://static.landbot.io/landbot-widget/landbot-widget-1.0.0.js"></script>
-<script>
-  var myLandbotLivechat = new LandbotLivechat({
-    index: 'https://landbot.io/u/H-97262-YRS0QP9AAV8IXYGH/index.html',
-  });
-</script>
 
 {% endblock %}
