--- a/app/views/support.html
+++ b/app/views/support.html
@@ -10,13 +10,8 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Supporting documents
+        Posters
       </h1>
-      <p>
-        Here we could have presentations, like the powerpoint explaining our design principles.
-      </p>
-
-      <h2 class="govuk-heading-m">Some posters</h2>
       <p>
         <a href="{{ asset_path }}images/posters-pdf/Poster_BetterDataBetterDecisions.pdf"><img src="{{ asset_path }}images/posters-pdf/Poster_BetterDataBetterDecisions.png" alt="Better Data better decisions poster" style="height:150px; margin-right:10px"></a>
         <a href="{{ asset_path }}images/posters-pdf/Poster_NoDataNoTruth.pdf"><img src="{{ asset_path }}images/posters-pdf/Poster_NoDataNoTruth.png" alt="No data no truthposter" style="height:150px; margin-right:10px"></a>
@@ -24,7 +19,7 @@
         <a href="{{ asset_path }}images/posters-pdf/Poster_YouAreNotYourUser.pdf"><img src="{{ asset_path }}images/posters-pdf/Poster_YouAreNotYourUser.png" alt="You are not your user poster" style="height:150px ;margin-right:10px"></a>
         <a href="{{ asset_path }}images/posters-pdf/visability93.png"><img src="{{ asset_path }}images/posters-pdf/visability93.png" alt="93% of people with usability don't use a wheelchair" style="height:150px"></a>
       </p>
-      <p><a href="{{ asset_path }}images/posters-pdf/DCE_chart.jpg"><img src="{{ asset_path }}images/posters-pdf/DCE_chart.jpg" alt="Digital Customer Experience chart diagram"></a></p>
+    
 
     </div>
 </div>
