--- a/app/views/index.html
+++ b/app/views/index.html
@@ -23,7 +23,7 @@
         <li><a href="forms/menu-forms.html">a list of forms</a></li>
         <li><a href="colours.html">colours</a></li>
         <li><a href="useful-links.html">useful links</a></li>
-        <li><a href="support.html">Poster</a></li>
+        <li><a href="support.html">Posters</a></li>
       </ul>
 
       <details class="govuk-details">
