tidy CBL and remove names

--- a/app/views/forms/equal-opportunities/start.html
+++ b/app/views/forms/equal-opportunities/start.html
@@ -34,7 +34,7 @@ Equality and diversity
     <ul class="govuk-list govuk-list--bullet">
         <li><strong>you would reach that page via a link on the  confirmation page stating: takes less than 1 minute</strong></li>
         <li>This is based on a document provided by Maureen from Housing</li>
-        <li>Ideally, we would want a questionnaire for the whole council - content not checked by Sharon yet</li>
+        <li>Ideally, we would want a questionnaire for the whole council</li>
         <li>see a shorter alternative <a href="/forms/equal-opportunities/start1">start page</a></li>
     </ul>
 </div>
