--- a/app/views/forms/housing/CBLstart.html
+++ b/app/views/forms/housing/CBLstart.html
@@ -57,6 +57,7 @@
   <h3 class="govuk-heading-s">Design notes:</h3>
   <ul class="govuk-list govuk-list--bullet">
     <li>original paper form: <a href="https://www.eastrenfrewshire.gov.uk/CHttpHandler.ashx?id=13165&p=0" target="_blank">https://www.eastrenfrewshire.gov.uk/CHttpHandler.ashx?id=13165&p=0</a></li>
+    <li>See the logic of some parts of the journey <a href="{{ asset_path }}/images/CBL-flow3-logic.pdf" target="_blank">as a PDF</a></li>
   </ul>
 </div>
 
