--- a/app/views/forms/menu-forms.html
+++ b/app/views/forms/menu-forms.html
@@ -15,15 +15,15 @@
 
 
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="housing/CBLstart.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">CBL</a><br>version with final updated content from UR session 08/01 and 09/01<br><strong class="govuk-tag info">last update:</strong><strong> 11/01 afternoon</strong><br>
+        <li><a href="housing/CBLstart.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">CBL</a><br>Final version <strong class="govuk-tag info">last update:</strong><strong> 19/01 morning</strong><br>
           See the flow of screens used in UR session of Monday 10/12/18 <a href="{{ asset_path }}/images/CBLflowur1012.pdf" target="_blank">as a PDF</a><br>
           See the flow of screens used in the UR session of the 08-09/01/19 <a href="{{ asset_path }}/images/CBLflowur0801.pdf" target="_blank">as a PDF</a><br>
-          <li><a href="housing/bid/start.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Bidding form</a><br><strong class="govuk-tag info">last update:</strong>  <strong>18/01 evening</strong>
+          See the logic flow for 'living alone' <a href="{{ asset_path }}/images/CBL-logic-live-alone.pdf" target="_blank">as a PDF</a> and the rest of the logic parts <a href="{{ asset_path }}/images/CBL-flow3-logic.pdf" target="_blank">as a PDF</a><br>
+          <li><a href="housing/bid/start.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Bidding form</a> <strong class="govuk-tag info">last update:</strong>  <strong>18/01 evening</strong>
           </li>
-        <li><a href="equal-opportunities/start1.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Equality and diversity</a><br>Based on Housing document - reviewed by Sharon now<br> <strong class="govuk-tag info">last update:</strong>  <strong>08/01 evening</strong><br>
-        See original paper form at the end of CBL <a href="{{ asset_path }}/images/equality-questionnaire-paper-form.png" target="_blank">as an image</a><br>
-        See an <a href="equal-opportunities/start2.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">alternative questionnaire </a> following feedback - <strong class="govuk-tag info">last update:</strong> 1<strong>8/01 evening</strong></li>
-        See the flow of screens <a href="{{ asset_path }}/images/equality-diversity-questionnaire5.pdf" target="_blank">as a PDF</a><br>
+        <li><a href="equal-opportunities/start2.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Equality and diversity</a><br>Final version <strong class="govuk-tag info">last update:</strong>  <strong>18/01 evening</strong><br>
+        See original paper version at the end of CBL form <a href="{{ asset_path }}/images/equality-questionnaire-paper-form.png" target="_blank">as an image</a><br>
+        See the flow of screens <a href="{{ asset_path }}/images/equality-diversity-questionnaire5.pdf" target="_blank">as a PDF</a><br></li>
         <br>
 
         <li><a href="education/P1-start1.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">P1 enrolment</a><br>version with modification and feedback following UR testing on the 28/11<br> <strong class="govuk-tag info">last update:</strong>  <strong>18/12 morning</strong>
