--- a/app/views/forms/housing/CBLdeclaration2-error.html
+++ b/app/views/forms/housing/CBLdeclaration2-error.html
@@ -62,7 +62,7 @@
 <div class="content-notes-box">
     <h3 class="govuk-heading-s">Content notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-        <li>Done by Sharon, agreed by housing on the 10/01 meeting</li>
+        <li>Agreed by housing on the 10/01 meeting</li>
     </ul>
 </div>
 <div class="design-notes-box">
