--- a/app/assets/sass/ERC.scss
+++ b/app/assets/sass/ERC.scss
@@ -224,7 +224,7 @@ font-family: nta;
     p, h3, li {
         color: #a94442;
     }
-   // display: none
+   // display: none;
 }
 .IT-notes-box{
     border: solid 1px #bcdff1;
@@ -236,7 +236,7 @@ font-family: nta;
     p, h3, li {
         color: #31708f;
     }
-    // display: none
+    // display: none;
 }
 .content-notes-box{
     border: solid 1px#faf2cc;
@@ -248,7 +248,7 @@ font-family: nta;
     p, h3, li {
         color: #8a6d3b;
     }
-   //  display: none
+   //  display: none;
 }
 .UR-notes-box{
     border: solid 1px#d0e9c6;
@@ -260,7 +260,7 @@ font-family: nta;
     p, h3, li {
         color: #3c763d;
     }
-    // display: none
+    // display: none;
 }
 .alt-notes-box{
     border: solid 1px #dddddd;
@@ -272,12 +272,12 @@ font-family: nta;
     p, h3, li, a {
         color: #dddddd;
     }
-    // display: none
+    // display: none;
 }
 
 // -------------------------------------------- CBL------------------------------------------------- //
 
-#CBLperson2, #CBLperson3, #CBLperson4, #CBLperson5, #CBLperson6, #CBLchild2, #CBLchild3, {
+#CBLperson2, #CBLperson3, #CBLperson4, #CBLperson5, #CBLperson6, #CBLchild2, #CBLchild3 {
     display: none;
 }
 hr.erc {
