make a homepage for potential project

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -60,6 +60,11 @@
           </div>
         </details>
 
+        <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+        
+        <h2 class="govuk-heading-m">Prototype to illustrate ESOL IT course</h2>
+        <p>This is just to illustrate how it could look for now (15/02/2020)</p>
+        <p><a href="esol/home.html">See the homepage</a></p>
 
 
     </div>
